--- a/static/css/cards-inference.css
+++ b/static/css/cards-inference.css
@@ -709,7 +709,7 @@
 }
 
 .sparkline-fill {
-  opacity: 0.22;
+  opacity: 0.45;
 }
 
 .sparkline-line.prompt {
